--- a/css/veed.css
+++ b/css/veed.css
@@ -54,3 +54,103 @@ body {
 .veed-logo {
     width: 350px;
 }
+
+.btn-tor { 
+    color: #FFFFFF; 
+    background-color: #36B0B5; 
+    border-color: #2F9FA3; 
+} 
+
+.btn-tor:hover, 
+.btn-tor:focus, 
+.btn-tor:active, 
+.btn-tor.active, 
+.open .dropdown-toggle.btn-tor { 
+    color: #FFFFFF; 
+    background-color: #1E7F82; 
+    border-color: #2F9FA3; 
+} 
+
+/* Custom Button Colors */
+.btn-info {
+    color: #ffffff;
+    background-color: #36b0b5;
+    border-color: #309da1;
+}
+.btn-info:hover,
+.btn-info:focus,
+.btn-info:active,
+.btn-info.active,
+.open > .dropdown-toggle.btn-info {
+    color: #ffffff;
+    background-color: #2a8a8e;
+    border-color: #226f72;
+}
+.btn-info:active,
+.btn-info.active,
+.open > .dropdown-toggle.btn-info {
+    background-image: none;
+}
+.btn-info.disabled,
+.btn-info[disabled],
+fieldset[disabled] .btn-info,
+.btn-info.disabled:hover,
+.btn-info[disabled]:hover,
+fieldset[disabled] .btn-info:hover,
+.btn-info.disabled:focus,
+.btn-info[disabled]:focus,
+fieldset[disabled] .btn-info:focus,
+.btn-info.disabled:active,
+.btn-info[disabled]:active,
+fieldset[disabled] .btn-info:active,
+.btn-info.disabled.active,
+.btn-info[disabled].active,
+fieldset[disabled] .btn-info.active {
+    background-color: #36b0b5;
+    border-color: #309da1;
+}
+.btn-info .badge {
+    color: #36b0b5;
+    background-color: #ffffff;
+}
+.btn-warning {
+    color: #ffffff;
+    background-color: #f0d256;
+    border-color: #eecc3f;
+}
+.btn-warning:hover,
+.btn-warning:focus,
+.btn-warning:active,
+.btn-warning.active,
+.open > .dropdown-toggle.btn-warning {
+    color: #ffffff;
+    background-color: #ecc627;
+    border-color: #dcb514;
+}
+.btn-warning:active,
+.btn-warning.active,
+.open > .dropdown-toggle.btn-warning {
+    background-image: none;
+}
+.btn-warning.disabled,
+.btn-warning[disabled],
+fieldset[disabled] .btn-warning,
+.btn-warning.disabled:hover,
+.btn-warning[disabled]:hover,
+fieldset[disabled] .btn-warning:hover,
+.btn-warning.disabled:focus,
+.btn-warning[disabled]:focus,
+fieldset[disabled] .btn-warning:focus,
+.btn-warning.disabled:active,
+.btn-warning[disabled]:active,
+fieldset[disabled] .btn-warning:active,
+.btn-warning.disabled.active,
+.btn-warning[disabled].active,
+fieldset[disabled] .btn-warning.active {
+    background-color: #f0d256;
+    border-color: #eecc3f;
+}
+.btn-warning .badge {
+    color: #f0d256;
+    background-color: #ffffff;
+}
