--- a/css/veed.css
+++ b/css/veed.css
@@ -7,16 +7,15 @@ body {
 }
 
 #bg {
+    color: #FFFFFF;
     position:relative;
-    width:100%;
-    min-height:760px;
-    height:auto;
-    background-image:url(../images/bgimage-smaller.jpg);
-    background-size:cover;
-    background-position:center center;
-    text-align:center;
-    color:#fff;
-    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.75);
+    min-height: 768px;
+    width: 100%;
+    height: auto;
+    background-image: url(../images/bgimage-smaller.jpg);
+    background-position: center top;
+    background-size: cover;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6)
 }
 
 .signup_page_form {
@@ -31,6 +30,7 @@ body {
 
 .veed-findoutmore {
     margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 .corner-caption {
