--- a/css/veed.css
+++ b/css/veed.css
@@ -14,7 +14,7 @@ body {
     width: 100%;
     height: auto;
     background-image: url(../images/bgimage-smaller.jpg);
-    background-position: center top;
+    background-position: left top;
     background-size: cover;
     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6)
 }
