--- a/css/veed.css
+++ b/css/veed.css
@@ -6,6 +6,10 @@ body {
     background-color: #ddd;
 }
 
+blockquote {
+    border-left: none;
+}
+
 #bg {
     color: #FFFFFF;
     text-align: center;
